--- a/index.html
+++ b/index.html
@@ -4,17 +4,40 @@
     <meta charset="UTF-8">
     <title>Title</title>
     <link rel="stylesheet" href="stylesheets/style.css" type="text/css"/>
+    <script
+            src="https://code.jquery.com/jquery-3.3.1.js"
+            integrity="sha256-2Kok7MbOyxpgUVvAk/HJ2jigOSYS2auK4Pfzbm7uH60="
+            crossorigin="anonymous"></script>
 </head>
 <body>
+<!--To make a top navbar, we just need a header element really. THis header element persists on each page -->
+<!--also, independently, to make it always appear on top (even on the same page), we : -->
+<header>
+
+
+</header>
+
+<div class="main">
 <ul>
 
     <li>
 
-        item 1
+        <img src="resources/cucsc_group.jpg"/>
     </li>
     <li>
-        item 2
+        A huge paragraph item 2
+        A huge paragraph item 2
+        A huge paragraph item 2
+        A huge paragraph item 2
+        A huge paragraph item 2
+        A huge paragraph item 2
+        A huge paragraph item 2
+        A huge paragraph item 2
+        A huge paragraph item 2
+        A huge paragraph item 2
     </li>
+    <!--flex box: same size?-->
 </ul>
+</div>
 </body>
 </html>
