simplify and get the simple figure based approach working

--- a/new_index.html
+++ b/new_index.html
@@ -10,11 +10,12 @@
     <link rel="stylesheet" href="stylesheets/new_style.css" type="text/css"/>
 </head>
 <body>
+<!--since the thing is not constrained, it doesn't matter...-->
 <figure>
     <img id="the_img" src='http://placehold.it/200x200' alt='missing' />
     <figcaption id="img_cap">Album name goes here
-        <br>Year goes heraweqjhjlsasnnslandlnsalnlksmdksdknsdskdnksdnksndksndksdndsknsdlksdnke
-        <br>artist name goes here</figcaption>
+        Year goes heraweqjhjlsasnnslandlnsalnlksmdksdknsdskdnksdnksndksndksdndsknsdlksdnke
+        artist name goes here</figcaption>
     <!--image with caption html bootstrap-->
     <!--nice: bootstrap pathway forward-->
     <!--interesting: a web-only (read: javascript way of editing a source code file on github). This would allow for the persistent storage!-->
